<resources>
    <string name="app_name">Inventory Application</string>
    <string name="sistema_de_gestion_de_inventario">Sistema de gestion de inventario</string>
    <string name="welcome">Bienvenido</string>
    <string name="bienvenido_administrador">Bienvenido Administrador</string>
    <string name="providers">Proveedores</string>
    <string name="categories">Categorías</string>
    <string name="costo_producto">Costo Del Producto</string>
    <string name="products">Productos</string>
    <string name="sales">Ventas</string>
    <string name="kardex">Kardex</string>
    <string name="emptyEmail">Email Field Is Empty, Please Entry Value</string>
    <string name="emptyPassword">Password Field Is Empty, Please Entry Value</string>
    <string name="emptyEmailAndPassword">Email And Pass Field Is Empty, Please Entry Values</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="register">Registrarse</string>
    <string name="create_user">CREAR USUARIO</string>
    <string name="Name">Nombre</string>
    <string name="provider">Proveedor</string>
    <string name="total_items">Total Del Producto</string>
    <string name="availability">Disponibilidad</string>
    <string name="stock">Stock Minimo</string>
    <string name="save">Guardar</string>
    <string name="image">Imagen</string>
    <string name="err_firebase">ERROR FIREBASE</string>
    <string name="add_providers">Agregar Proveedores</string>
    <string name="list_providers">Lista de proveedores</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="doc_type">Tipo de documento</string>
    <string name="document_number">Número de documento</string>
    <string name="telphone_number">Teléfono</string>
    <string name="e_mail">E-mail</string>
    <string name="address">Dirección</string>

    <string-array name="type_document">
        <item>Cedula De Ciudania</item>
        <item>Extranjero(a)</item>
        <item>Pasaporte</item>
    </string-array>
</resources>