<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModelProducts"
            type="com.codejunior.inventoryapplication.viewmodel.ProductsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ShapeAppearance.Material3.LargeComponent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".view.MainView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            style="@style/rectangle_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/product_icon" />

                <TextView
                    android:id="@+id/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/products"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icon"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="50dp"
                android:text="@string/Name"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:hint="Producto"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_provider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/provider"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/edt_name" />

            <EditText
                android:id="@+id/edt_provider"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Digite El proveedor"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_provider" />

            <TextView
                android:id="@+id/tv_disponibilidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/availability"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/edt_provider" />

            <EditText
                android:id="@+id/edt_disponibilidad"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/availability"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_disponibilidad" />

            <TextView
                android:id="@+id/tv_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/stock"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/edt_disponibilidad"
                app:layout_constraintTop_toBottomOf="@+id/edt_provider" />

            <EditText
                android:id="@+id/edt_stock"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="stock"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/tv_stock"
                app:layout_constraintTop_toBottomOf="@+id/tv_stock" />

            <Button
                android:id="@+id/button"
                android:layout_width="151dp"
                android:layout_height="45dp"
                android:background="@drawable/shape_button"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>